ongoing prisma migration

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,6 +5,7 @@
       "@abstracts/*": ["src/abstracts/*"],
       "@common/*": ["src/common/*"],
       "@utils/*": ["src/utils/*"],
+      "@prisma/*": ["src/prisma/*"],
       "@budget/*": ["src/budget/*"],
       "@expense/*": ["src/expense/*"]
     }
