--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,10 @@
       "@utils/*": ["src/utils/*"],
       "@budget/*": ["src/budget/*"],
       "@expense/*": ["src/expense/*"],
+      "@account/*": ["src/account/*"],
+      "@user/*": ["src/user/*"],
+      "@transaction/*": ["src/transaction/*"],
+      "@category/*": ["src/category/*"]
     }
   }
 }
