--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,7 +6,11 @@
       "@common/*": ["src/common/*"],
       "@utils/*": ["src/utils/*"],
       "@budget/*": ["src/budget/*"],
-      "@expense/*": ["src/expense/*"]
+      "@expense/*": ["src/expense/*"],
+      "@account/*": ["src/account/*"],
+      "@user/*": ["src/user/*"],
+      "@transaction/*": ["src/transaction/*"],
+      "@category/*": ["src/category/*"]
     }
   },
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
