--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
       "@account/*": ["src/account/*"],
       "@user/*": ["src/user/*"],
       "@transaction/*": ["src/transaction/*"],
-      "@category/*": ["src/category/*"]
+      "@category/*": ["src/category/*"],
+      "@auth/*": ["src/auth/*"]
     }
   }
 }
